# Elly2018

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
editor/: ellyality.c
main/: ellyality.cpp  ellyality.h
